[package]
name = "ufo_websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1.9"
uuid = { version = "1", features = ["v4","fast-rng","serde"]}
futures = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
syslog = "6"
config = "0.13"
log = "0.4"
env_logger = "0.9"
